--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <name>ruoyi</name>
     <url>http://www.ruoyi.vip</url>
-    <description>若依管理系统</description>
+    <description>大学生创新创业大赛管理平台</description>
 
     <properties>
         <ruoyi.version>3.8.8</ruoyi.version>
