--- a/xinghe-admin/pom.xml
+++ b/xinghe-admin/pom.xml
@@ -74,6 +74,12 @@
             <version>3.8.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.16</version>
+        </dependency>
+
     </dependencies>
 
     <build>
