--- a/student_innovate_ui/.env.production
+++ b/student_innovate_ui/.env.production
@@ -1,8 +1,8 @@
 # 页面标题
-VUE_APP_TITLE = 大学生创新创业大赛管理平台
+VUE_APP_TITLE = 大学生创新创业训练计划项目管理系统
 
 # 生产环境配置
 ENV = 'production'
 
-# 大学生创新创业大赛管理平台/生产环境
+# 大学生创新创业训练计划项目管理系统/生产环境
 VUE_APP_BASE_API = '/api'
