--- a/student_innovate_ui/.env.staging
+++ b/student_innovate_ui/.env.staging
@@ -1,5 +1,5 @@
 # 页面标题
-VUE_APP_TITLE = 大学生创新创业大赛管理平台
+VUE_APP_TITLE = 大学生创新创业训练计划项目管理系统
 
 BABEL_ENV = production
 
@@ -8,5 +8,5 @@ NODE_ENV = production
 # 测试环境配置
 ENV = 'staging'
 
-# 大学生创新创业大赛管理平台/测试环境
+# 大学生创新创业训练计划项目管理系统/测试环境
 VUE_APP_BASE_API = '/api'
