--- a/student_innovate_ui/.env.development
+++ b/student_innovate_ui/.env.development
@@ -1,10 +1,10 @@
 # 页面标题
-VUE_APP_TITLE = 大学生创新创业大赛管理平台
+VUE_APP_TITLE = 大学生创新创业训练计划项目管理系统
 
 # 开发环境配置
 ENV = 'development'
 
-# 大学生创新创业大赛管理平台/开发环境
+# 大学生创新创业训练计划项目管理系统/开发环境
 VUE_APP_BASE_API = '/api'
 
 # 路由懒加载
