--- a/student_innovate_ui/package.json
+++ b/student_innovate_ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi",
   "version": "3.8.8",
-  "description": "大学生创新创业大赛管理平台",
+  "description": "大学生创新创业训练计划项目管理系统",
   "author": "若依",
   "license": "MIT",
   "scripts": {
