--- a/xinghe-admin/src/main/resources/application-dev.yml
+++ b/xinghe-admin/src/main/resources/application-dev.yml
@@ -63,11 +63,12 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: 127.0.0.1
+    host: 49.232.240.197
     # 端口，默认为6379
     port: 6379
     # 数据库索引
     database: 8
+    password: poiuytrewq321
     # 密码
     # 连接超时时间
     timeout: 10s
